--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-location": "~16.1.0",
     "expo-screen-orientation": "~6.0.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-maps": "1.7.1",
-    "expo-location": "~16.1.0"
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-dotenv": "^3.4.9"
   },
   "private": true
 }
