--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       "supportsTablet": true
     },
     "android": {
+      "icon":"./assets/icon.png",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
