--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-maps": "1.7.1",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
